@@ -409,15 +409,28 @@ public class J2SEVolumeCustomizer extends javax.swing.JPanel implements Customiz
                 NbBundle.getMessage(J2SEVolumeCustomizer.class, "CTL_AddJavadocURLMessage"),
                 NbBundle.getMessage(J2SEVolumeCustomizer.class, "CTL_AddJavadocURLTitle"));
         if (DialogDisplayer.getDefault().notify(input) == DialogDescriptor.OK_OPTION) {
-            try {
-                String value = input.getInputText();
-                URL url = new URL(value);
-                model.addResource(url);
-                content.setSelectedIndex(model.getSize() - 1);
-            } catch (MalformedURLException mue) {
-                DialogDisplayer.getDefault().notify(new DialogDescriptor.Message(
-                        NbBundle.getMessage(J2SEVolumeCustomizer.class, "CTL_InvalidURLFormat"),
-                        DialogDescriptor.ERROR_MESSAGE));
+
+            final String value = input.getInputText();
+            if (allowRelativePaths != null && allowRelativePaths.booleanValue()) {
+                try {
+                    final URI uri = new URI(value);
+                    model.addResource(uri);
+                    content.setSelectedIndex(model.getSize() - 1);
+                } catch (URISyntaxException use) {
+                    DialogDisplayer.getDefault().notify(new DialogDescriptor.Message(
+                    NbBundle.getMessage(J2SEVolumeCustomizer.class, "CTL_InvalidURLFormat"),
+                    DialogDescriptor.ERROR_MESSAGE));
+                }
+            } else {
+                try {
+                    final URL url = new URL(value);
+                    model.addResource(url);
+                    content.setSelectedIndex(model.getSize() - 1);
+                } catch (MalformedURLException mue) {
+                    DialogDisplayer.getDefault().notify(new DialogDescriptor.Message(
+                    NbBundle.getMessage(J2SEVolumeCustomizer.class, "CTL_InvalidURLFormat"),
+                    DialogDescriptor.ERROR_MESSAGE));
+                }
             }
         }
     }//GEN-LAST:event_addURLButtonActionPerformed
